# brapi-proxy

./: .gitignore  README.md  config_demo.ini  pyproject.toml  service.py  service.sh
docker/: Dockerfile  docker-compose.yml
service/: __init__.py  brapi.py
service/core/: __init__.py  core_commoncropnames.py  core_serverinfo.py  core_studies.py
service/genotyping/: __init__.py  genotyping_allelematrix.py  genotyping_callsets.py  genotyping_plates.py  genotyping_references.py  genotyping_referencesets.py  genotyping_samples.py  genotyping_variants.py  genotyping_variantsets.py
src/brapi_proxy/: brapi.py  service.py
src/brapi_proxy/genotyping/: genotyping_allelematrix.py
